# 8085emu-gui

./: CMakeLists.txt
core/include/: 8085.h  Terminal.h
include/: 8085_gui.h
modules/glad/include/glad/: glad.h
modules/glad/src/: glad.c
src/: 8085_gui.cpp  main.cpp
